# homepage

./: .gitignore  .rustc_info.json  CNAME  Cargo.toml  LICENSE  Trunk.toml  homepage-2b5747f1c2c04c04.js  homepage-2b5747f1c2c04c04_bg.wasm  homepage-2de107da1f4b782.js  homepage-2de107da1f4b782_bg.wasm  homepage-44c7c2bb032cd78e.js  homepage-44c7c2bb032cd78e_bg.wasm  homepage-5c56c14f6db4f3a9.js  homepage-5c56c14f6db4f3a9_bg.wasm  homepage-7aece4eac64c484e.js  homepage-7aece4eac64c484e_bg.wasm  homepage-890b56a9691043c8.js  homepage-d91f26aa7eeb0d18.js  homepage-d91f26aa7eeb0d18_bg.wasm  homepage-ff2b40df66ea96c4.js  homepage-ff2b40df66ea96c4_bg.wasm  index.html  tailwind.config.js  tailwind.css
.github/workflows/: Deploy.yml  rust_build.yml
release/.fingerprint/autocfg-8270e8db799fbcca/: lib-autocfg  lib-autocfg.json
release/.fingerprint/boolinator-80865812a53755eb/: lib-boolinator  lib-boolinator.json
release/.fingerprint/bumpalo-0ae19391af4460ed/: lib-bumpalo  lib-bumpalo.json
release/.fingerprint/equivalent-28b5393a19df6f10/: lib-equivalent  lib-equivalent.json
release/.fingerprint/futures-macro-fad98e3c7e370b57/: lib-futures-macro  lib-futures-macro.json
release/.fingerprint/gloo-worker-macros-c24b6990ec464755/: lib-gloo-worker-macros  lib-gloo-worker-macros.json
release/.fingerprint/hashbrown-3f571277c0b45d74/: lib-hashbrown  (+1 more)
src/: about.rs  home.rs  main.rs  nav.rs  projects.rs  tailwind.css
wasm-bindgen/release/: homepage-890b56a9691043c8.js  homepage-890b56a9691043c8_bg.wasm
wasm32-unknown-unknown/release/: homepage.d  homepage.wasm
(+263 files in other folders)
